Updated Catalan translation using Weblate
Currently translated at 100.0% (215 of 215 strings)

Co-authored-by: Ícar N. S <icar.nin@pm.me>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/ca/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-ca-rES/strings.xml
+++ b/app/src/main/res/values-ca-rES/strings.xml
@@ -148,7 +148,7 @@
     <string name="few_unread_articles">%1$s articles sense llegir</string>
     <string name="failed_to_import_OPML">Ha fallat la importació de l\'OPML</string>
     <string name="failed_to_export_OPML">Ha fallat l\'exportació de l\'OPML</string>
-  <string name="dark_theme_preference">Tema fosc preferit</string>
+    <string name="dark_theme_preference">Tema fosc preferit</string>
     <string name="many_unread_articles">%1$s articles sense llegir</string>
     <string name="showing_all_articles">Visualitza tots els articles</string>
     <string name="feed_item_style_compact">Compacte</string>
@@ -156,8 +156,8 @@
     <string name="other_unread_articles">%1$s articles sense llegir</string>
     <string name="only_enable_for_bad_id_feeds">Habilita-ho només per canals amb identificadors dolents</string>
     <string name="from_anywhere">Des de qualsevol lloc</string>
-  <string name="are_you_sure_leave_sync_chain">Esteu segurs que voleu sortir de la cadena de sincronització\?</string>
-  <string name="only_available_on_android_n">Només disponible a l\'Android %1$s i superior</string>
+    <string name="are_you_sure_leave_sync_chain">Esteu segurs que voleu sortir de la cadena de sincronització\?</string>
+    <string name="only_available_on_android_n">Només disponible a l\'Android %1$s i superior</string>
     <string name="use_app_default">Utilitza l\'opció per defecte</string>
     <string name="device_sync_financed_by_community">Aquest servei és pagat per la comunitat. Si us plau, considereu fer una donació si el troba útil.</string>
     <string name="add_new_device">Afegeix un dispositiu nou</string>
@@ -169,7 +169,7 @@
     <string name="dark_theme_preference_black">Negre</string>
     <string name="unread_adjective">Sense llegir</string>
     <string name="already_read">Ja llegit</string>
-  <string name="one_unread_article">%1$s article sense llegir</string>
+    <string name="one_unread_article">%1$s article sense llegir</string>
     <string name="invalid_url">URL no vàlida</string>
     <string name="device_sync">Sincronització del dispositiu</string>
     <string name="disconnect_device_from_sync">Desconnecta el dispositiu de la cadena de sincronització</string>
@@ -186,4 +186,33 @@
     <string name="block_list_description">Amaga històries amb títols que contenen algun d\'aquests filtres. Filtres d\'exemple:</string>
     <string name="text_scale">Escalat del text</string>
     <string name="sync_to_fetch">Sincronitza per obtenir l\'article</string>
+    <string name="few_feeds">%1$s canals</string>
+    <string name="many_feeds">%1$s canals</string>
+    <string name="other_feeds">%1$s canals</string>
+    <string name="import_x_feeds_with_y_tags">Importar %1$s amb %2$s\?</string>
+    <string name="zero_tags">%1$s etiquetes</string>
+    <string name="one_tags">%1$s etiqueta</string>
+    <string name="two_tags">%1$s etiquetes</string>
+    <string name="few_tags">%1$s etiquetes</string>
+    <string name="many_tags">%1$s etiquetes</string>
+    <string name="other_tags">%1$s etiquetes</string>
+    <string name="failed_to_fetch_full_article_missing_body">No s\'ha trobat res a obtenir</string>
+    <string name="article_list_settings">Llista d\'articles</string>
+    <string name="show_only_title">Mostra només el títol</string>
+    <string name="mark_as_read_on_scroll">Marca els articles com a llegits al desplaçar-s\'hi</string>
+    <string name="no_feeds">Cap canal</string>
+    <string name="zero_feeds">%1$s canals</string>
+    <string name="one_feed">%1$s canal</string>
+    <string name="two_feeds">%1$s canals</string>
+    <string name="failed_to_fetch_full_article_not_html">L\'enllaç no apunta a un document HTML</string>
+    <string name="failed_to_fetch_full_article_missing_link">Falta al canal l\'enllaç a l\'article</string>
+    <string name="max_lines">Màxim número de línies</string>
+    <string name="saved_adjective">Desat</string>
+    <string name="filter_noun">Filtre</string>
+    <string name="recently_read_adjective">Llegit recentment</string>
+    <string name="read_adjective">Llegit</string>
+    <string name="saved_articles">Articles desats</string>
+    <string name="saved_article">Article desat</string>
+    <string name="save_article">Desa l\'article</string>
+    <string name="unsave_article">Treu l\'article de desats</string>
 </resources>
